--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Layout from '../layouts/Layout.astro';
 import ExcitingVideos from '../components/ExcitingVideos.astro';
 import Music from '../components/Music.astro';
 import Questions from '../components/Questions.astro';
+import ButtonWhatsApp from '../components/ButtonWhatsApp.astro';
 ---
 
 <Layout>	
@@ -41,4 +42,5 @@ import Questions from '../components/Questions.astro';
 			<p class="text-xs px-20 py-2 text-white/60">© 2025, Letra Viva.</p>
 		</div>
 	</footer>
+	<ButtonWhatsApp
 </Layout>
